--- a/Milestone-1/.gitignore
+++ b/Milestone-1/.gitignore
@@ -1,5 +1,5 @@
-css.png
-html.png
-next-js.png
-typescript.png
-Untitled design.png
+/css.png
+/html.png
+/next-js.png
+/typescript.png
+/Untitled design.png
